--- a/index.html
+++ b/index.html
@@ -12,22 +12,12 @@
     <title>Divers hotel | reserve now !!</title>
   </head>
   <body>
-    <p id="demo"></p>
-
-    <div id="clockdiv">
-      <div>
-        <span class="minutes"></span>
-        <div class="smalltext">Minutes</div>
-      </div>
-      <div>
-        <span class="seconds"></span>
-        <div class="smalltext">Seconds</div>
-      </div>
+    <div class="bg"> 
+        <h1 class="text-center">Divers hotel | reservation</h1>  
     </div>
-
     <div class="container m-auto pt-5">
       <div class="row justify-content-center">
-        <h1 class="text-center">Divers hotel | reservation</h1>
+        
 
         <!-- step 1 starts here-->
         <!----------------------->
@@ -170,7 +160,7 @@
             <div class="row pt-5">
               <div class="col-12 text-center">
                 <img class="mb-3" width="150px" src="https://i.imgur.com/jaNBRVn.png">
-                <h1>Cost is : <span class="p-2 text-danger" id="costContent"></span></h1>
+                <h1>Cost is : <span class="p-2" id="costContent"></span></h1>
               </div>
             </div>
         </div>
