--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <div class="container m-auto pt-5">
       <div class="row justify-content-center">
         
+        
+        <!--<div class="card bg-danger">
+          <div class="module">
+            <div class="countdown">
+              <div class="countdown__time">
+              </div>
+              <button class="countdown__reset">Reset Timer</button>
+            </div>
+          </div>
+        </div>-->
 
         <!-- step 1 starts here-->
         <!----------------------->
@@ -186,6 +196,7 @@
     <script type="text/javascript" src="navigation.js"></script>
     <script type="text/javascript" src="logic.js"></script>
     <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="timer.js"></script>
 
     <script type="text/javascript">
       checkTheUserCurrentStep();
